<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rent My Car</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_name">Sign up name</string>
    <string name="delete">DELETE</string>
    <string name="post">POST</string>
    <string name="get">GET</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="rental_name">Rental name</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>
    <string name="car_list">Car list</string>
    <string name="details_engine">Details Engine</string>
    <string name="no_car_available">no car available</string>
    <string name="rental">Rentals</string>
    <string name="create_rental">Create Rental</string>
    <string name="rental_location">Locations of Rentals</string>
    <string name="provider_dashboard">Dashboard</string>
    <string name="reserve">Reserve</string>
    <string name="details">Details</string>
    <string name="details_car">Details car</string>
    <string name="details_rental">Details rental</string>
    <string name="construction_year">Construction Year</string>
    <string name="mileage">Mileage</string>
    <string name="model">Model</string>
    <string name="price">Price</string>
    <string name="power">Power</string>
    <string name="engine_type">Engine type</string>
    <string name="fuel_type">Fuel type</string>
    <string name="fuel_use_per_km">Fuel Use</string>
    <string name="fuel_price">Fuel price</string>
    <string name="bev_engine">BEV engine</string>
    <string name="fcev_engine">FCEV Engine</string>
    <string name="ice_engine">ICE Engine</string>
    <string name="no_database_connection">Error to reach database</string>
    <string name="created">Created</string>
    <string name="login">Login</string>
    <string name="provider_activity">Provider Activity</string>
    <string name="customer_activity">customer Activity</string>
    <string name="rental_list_fragment">Rentals</string>
    <string name="reservations">Reservations</string>
    <string name="dashboard_customer">Dashboard customer</string>
    <string name="rental_picture">Rental picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_put_engineSpec">Error engineSpec</string>
    <string name="error_put_engine">Error engine</string>
    <string name="error_put_car">Error car</string>
    <string name="error_put_rental">Error rental</string>
    <string name="error_put_location">Error location</string>
    <string name="network_call_failed">Network error</string>
    <string name="car_type">Engine type</string>
    <string name="set_location">SetLocation</string>
    <string name="search">Search</string>
    <string name="no_search_query">Geen locatie ingegeven</string>
    <string name="no_results_found">Geen resultaten gevonden</string>
    <string name="car_overview">Car overview</string>
    <string name="location">Location</string>
    <string name="name">name</string>
    <string name="fuelType">fuel Type</string>
    <string name="fuelUsePerKm">fuelUsePerKm</string>
    <string name="fuelPrice">fuelPrice</string>
    <string name="address">address</string>
    <string name="create_rental_avability">create rental availability</string>
    <string name="city">city</string>
    <string name="continue_btn">continue</string>
    <string name="error_put_user">error_put_user</string>
    <string name="sign_in">sign in</string>
    <string name="first_name">First name</string>
    <string name="register">Register</string>
    <string name="start_for_free">start for free</string>
    <string name="last_name">last name</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="create_account">create account</string>
    <string name="account_exists">account exists</string>
    <string name="email_empty">email empty</string>
    <string name="email_incorrect">email incorrect</string>
    <string name="password_empty">password empty</string>
    <string name="password_incorrect">password incorrect</string>
    <string name="name_incorrect">name  incorrect</string>
    <string name="registering">registering</string>
    <string name="create_an_account">create an account</string>
    <string name="invalid_payment_method">invalid payment method</string>
    <string name="paid_at">paid at</string>
    <string name="reservation_overview">Reservation</string>
    <string name="error_get_timeslots">Unable to retrieve timeslots. Try again later.</string>
    <string name="reservation_number">Reservation Number:</string>
    <string name="price_reservation">Total:</string>
    <string name="price_amount_reservation">€%.2f%n</string>
    <string name="price_product">Rent Car:</string>
    <string name="price_reservation_insurance">Price Insurance:</string>
    <string name="insurance_type">Insurance Type:</string>
    <string name="description">Description:</string>
    <string name="status_completed">COMPLETED</string>
    <string name="status_pending">PENDING</string>
    <string name="status_canceled">CANCELED</string>
    <string name="status_expired">EXPIRED</string>
    <string name="status">Status:</string>
    <string name="error_get_reservation">Reservation not found. Try again later.</string>
    <string name="pay">Pay Now</string>
    <string name="payment_method">Select payment method</string>
    <string name="payment_method_empty">Please select a payment method</string>
    <string name="error_post_payment">Cannot create payment. Please try again later.</string>
    <string name="error_get_payment">Cannot find payment</string>
    <string name="payment_method_used">Payment method:</string>
    <string name="proof_of_concept">RentMyCar is currently still in the concept phase. This means you cannot make an actual reservation yet. Please click one of the buttons below to simulate a payment and continue.</string>
    <string name="failure">Failure</string>
    <string name="success">Success</string>
    <string name="payment">Payment</string>
    <string name="payment_of_amount">Payment of €%.2f%n</string>
    <string name="ideal">iDeal</string>
    <string name="visa_card">Visa</string>
    <string name="paypal">PayPal</string>
    <string name="mastercard">Mastercard</string>
    <string name="payment_callback_failed">Payment callback failed</string>
    <string name="reservation_overview_title">Reservation Overview</string>
    <string name="image_uploaded">Image successfully uploaded</string>
    <string name="image_not_uploaded">Image could not be uploaded.</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="close_timeslot">Close Timeslot</string>
    <string name="open_timeslot">Open Timeslot</string>
    <string name="decline">Cancel</string>
    <string name="timeslot_close_message">Do you want to close the selected timeslot at %1$s?</string>
    <string name="timeslot_open_message">Do you want to re-open the selected timeslot at %1$s?</string>
    <string name="error_put_timeslot">Cannot update timeslot status. Try again later.</string>
    <string name="timeslot_status_updated">Timeslot status successfully updated</string>
    <string name="save_successful">Saved changes</string>
    <string name="my_reservations">My reservations</string>
    <string name="no_reservations_found">No reservations found</string>
    <string name="no_reservations_available">No reservations available to display</string>
    <string name="reservation_list_time">%1$s - %2$s</string>
    <string name="sign_in_account_exists">Already have an account?</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_text">Find the ideal car for your trip.</string>
    <string name="register_title">Sign up to RentMyCar.</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign up</u>.</string>
    <string name="login_title">Login to RentMyCar</string>
    <string name="confirm">Confirm Your Account</string>
    <string name="confirmation_token">Confirmation Token</string>
    <string name="already_confirmed">Already confirmed?</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="choose_a_car">Choose a car</string>
    <string name="no_cars_found">No cars found</string>
    <string name="no_cars_available">There are no cars available at the moment.</string>
    <string name="no_car_found">Car not found</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="cars">Cars</string>
    <string name="rent_a_car">Rent a car</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_in_to_account">Log in to your account</string>
    <string name="register_account">Register Account</string>
    <string name="my_locations">My locations</string>
    <string name="select_location">Select Location</string>
    <string name="location_overview">Location Overview</string>
    <string name="location_select">Select Location</string>
    <string name="location_details">Location Details</string>
    <string name="car_details">Car Details</string>
    <string name="car_brand_model">%1$s %2$s %3$s</string>
    <string name="car_type_bev">Battery Electric Vehicle</string>
    <string name="car_type_fcev">Fuel Cell Electric Vehicle</string>
    <string name="car_type_ice">Internal Combustion Engine</string>
    <string name="consumption">Consumption:</string>
    <string name="consumption_bev">%.2f%n kWh / 100km</string>
    <string name="consumption_fcev">%.2f%n kg / 100km</string>
    <string name="consumption_ice">%.2f%n L / 100km</string>
    <string name="brand">Brand:</string>
    <string name="brand_type">Type:</string>
    <string name="car_price">Starting at €%.2f%n per hour</string>
    <string name="confirmation_token_empty">Please fill in your confirmation token.</string>
    <string name="email_password_incorrect">E-mail address or password incorrect.</string>
    <string name="welcome_user">Welcome back to RentMyCar</string>
    <string name="user_welcome_back">Welcome back</string>
    <string name="add_location">Add Location</string>
    <string name="location_list_item">%1$s %2$s, %3$s, %4$s (%5$s)</string>
    <string name="no_locations_found">No locations found</string>
    <string name="no_locations_available">There are currently no locations available</string>
    <string name="location_details_header">%1$s %2$s, %3$s</string>
    <string name="update_location">Update Location</string>
    <string name="postal_code">Postalcode:</string>
    <string name="country">Country:</string>
    <string name="address_line">%1$s %2$s</string>
    <string name="delete_location">Delete Location</string>
    <string name="location_deleted">Location successfully deleted</string>
    <string name="view_on_map">View on map</string>
    <string name="available_from">Start date</string>
    <string name="available_until">End date</string>
    <string name="submit">Submit</string>
</resources>