<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragment.RentalPlanCreateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="8"
            android:textColor="@color/white_smoke"
            android:textSize="32sp"
            android:textStyle="bold"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/create_rental_avability" />


   <EditText
       android:id="@+id/start_date"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/available_from"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/nameTextView"
       android:paddingStart="60dp"
       android:paddingEnd="60dp"
       android:inputType="date"/>

        <EditText
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/available_until"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:paddingTop="20dp"
            android:inputType="date"
            app:startIconContentDescription="@string/available_until"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_date"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/indigo_500"
            android:layout_marginTop="10dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/submit"
            android:textColor="@color/white_smoke"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>