<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.fragment.createRental.CreateEngineSpecFragment"
    android:background="@drawable/background_car">
  

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
      




        <TextView
            android:id="@+id/details_rental"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@color/white"
            android:fontFamily="@font/gothammedium"
            android:text="@string/details_car"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />









        <!--            engineSpec-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/engine_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            android:background="@color/white"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/details_rental"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_type"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_fuel_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            android:hint="@string/fuel_type"
            android:inputType="text"
            android:background="@color/white"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/engine_type" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_fuel_use_per_km"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            android:hint="@string/fuel_use_per_km"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_fuel_type" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_fuel_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            android:hint="@string/fuel_price"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_fuel_use_per_km" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/enginespec_to_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothambold"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/next"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_fuel_price"
            app:layout_constraintVertical_bias="0.0" />



    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>